crates/next-code-frame/src/snapshots/next_code_frame__tests__context_lines.snap
---
source: crates/next-code-frame/src/tests.rs
expression: result
---
  2 | line 2
  3 | line 3
> 4 | line 4
    | ^
  5 | line 5
  6 | line 6
