crates/next-code-frame/src/snapshots/next_code_frame__tests__invalid_multiline_end_column_out_of_bounds.snap
---
source: crates/next-code-frame/src/tests.rs
expression: result
---
> 1 | line1
    |  ^^^
> 2 | short
    | ^^^^^^
  3 | line3
