crates/next-code-frame/src/snapshots/next_code_frame__tests__long_line_at_start.snap
---
source: crates/next-code-frame/src/tests.rs
expression: result
---
> 1 | aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa...
    |     ^
