crates/next-code-frame/src/snapshots/next_code_frame__tests__long_line_single_error.snap
---
source: crates/next-code-frame/src/tests.rs
expression: result
---
  1 | ...
> 2 | ...aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa...
    |                                                 ^
  3 | ...
