crates/next-code-frame/src/snapshots/next_code_frame__tests__markdown_file.snap
---
source: crates/next-code-frame/src/tests.rs
expression: result
---
  1 | # Title
  2 |
> 3 | This is a paragraph with some **bold** text.
    |                         ^
  4 |
  5 | ```javascript
  6 | const x = 1;
