crates/next-code-frame/src/snapshots/next_code_frame__tests__multiline_error_with_message.snap
---
source: crates/next-code-frame/src/tests.rs
expression: result
---
  1 | function test() {
> 2 |   console.log('hello')
    |   ^^^^^^^^^^^^^^^^^^^
> 3 |   return 42
    | ^^^^^^^^^^^ Unexpected expression
  4 | }
